Fix layout bug for bmfsfj logo

--- a/client/app/assets/stylesheets/aleut/components/_components.page-foot.scss
+++ b/client/app/assets/stylesheets/aleut/components/_components.page-foot.scss
@@ -58,3 +58,8 @@
 .c-page-foot__image {
   max-width: 100%;
 }
+
+.c-page-foot__logo-bmfsfj {
+  width: 182px;
+  height: auto;
+}
